[package]
name = "srfinder"
version = "0.1.0"
authors = ["Acizza <jgit@tuta.io>"]
edition = "2018"

[dependencies]
actix-files = "~0.2.0"
actix-web = "~2.0.0"
actix-rt = "~1.0.0"
env_logger = "~0.7.0"
serde = "~1.0.0"
serde_derive = "~1.0.0"

[dependencies.smol_str]
version = "~0.1.0"
features = [ "serde" ]