[package]
name = "srfinder"
version = "0.1.0"
authors = ["Acizza <jgit@tuta.io>"]
edition = "2018"

[dependencies]
actix-files = "~0.2.0"
actix-web = "~2.0.0"
actix-rt = "~1.1.0"
anyhow = "~1.0.0"
chrono = "~0.4.0"
csv = "~1.1.0"
dirs = "~2.0.0"
env_logger = "~0.7.0"
once_cell = "~1.4.0"
rand = "~0.7.0"
serde = "~1.0.0"
serde_derive = "~1.0.0"
smallvec = "~1.4.0"
ureq = "~1.0.0"

[dependencies.smol_str]
version = "~0.1.0"
features = [ "serde" ]

[profile.release]
lto = true
codegen-units = 1