[package]
name = "srfinder"
version = "0.1.0"
authors = ["Acizza <jgit@tuta.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
csv = "1.1"
dirs-next = "1.0"
once_cell = "1.4"
rand = "0.7"
serde = "1.0"
serde_derive = "1.0"

[dependencies.attohttpc]
version = "0.15"
default-features = false
features = [ "tls-rustls" ]

[dependencies.rocket]
# Waiting for version 0.5
git = "https://github.com/SergioBenitez/Rocket"
rev = "02b79e28f71ccbd1fce0e369469c92caedb38cd8"
default-features = false

[dependencies.rocket_contrib]
# Waiting for version 0.5
git = "https://github.com/SergioBenitez/Rocket"
rev = "02b79e28f71ccbd1fce0e369469c92caedb38cd8"
default-features = false
features = [ "json", "serve" ]

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.release.package.syn]
opt-level = 0
codegen-units = 256

[profile.release.package.quote]
opt-level = 0
codegen-units = 256

[profile.release.package.proc-macro2]
opt-level = 0
codegen-units = 256

[profile.release.package.serde_derive]
opt-level = 0
codegen-units = 256

[profile.release.package.rocket_codegen]
opt-level = 0
codegen-units = 256

[profile.release.package.devise_codegen]
opt-level = 0
codegen-units = 256

[profile.release.package.pear_codegen]
opt-level = 0
codegen-units = 256